# mexamaps

./: CLAUDE.md  CMakeLists.txt  DATA_LICENSE.txt  README.md  package.json  private.h  termux_build_fix.sh
.gemini/commands/: om-review.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/skills/: om-review.md
.github/workflows/: android-check.yaml
android/: CLAUDE.md  build.gradle  lint.xml  settings.gradle
android/app/: build.gradle
android/groovy/: publishing.gradle
android/libs/api/: build.gradle
android/libs/branding/: build.gradle
android/libs/car/: build.gradle
android/libs/downloader/: build.gradle
android/libs/googleassistant/: build.gradle
android/sdk/: build.gradle
android/sdk/src/main/cpp/: CMakeLists.txt
android/sdk/src/main/cpp/app/mexamaps/sdk/: ChoosePositionMode.cpp  DownloadResourcesLegacyActivity.cpp  Framework.cpp  LocationState.cpp  Map.cpp  MapManager.cpp  MapStyle.cpp  MexaMaps.cpp  Router.cpp  TrackRecorder.cpp  TrafficState.cpp
android/sdk/src/main/cpp/app/mexamaps/sdk/bookmarks/data/: Bookmark.cpp  BookmarkCategory.cpp  BookmarkManager.cpp  ElevationInfo.cpp  Icon.cpp  MapObject.cpp  Metadata.cpp  PredefinedColors.cpp  Track.cpp  Track.hpp  TrackStatistics.cpp
android/sdk/src/main/cpp/app/mexamaps/sdk/core/: jni_helper.cpp  logging.cpp
android/sdk/src/main/cpp/app/mexamaps/sdk/editor/: Editor.cpp  OpeningHours.cpp  OsmOAuth.cpp
android/sdk/src/main/cpp/app/mexamaps/sdk/isolines/: IsolinesManager.cpp
android/sdk/src/main/cpp/app/mexamaps/sdk/opengl/: androidoglcontextfactory.cpp  androidoglcontextfactory.hpp
android/sdk/src/main/cpp/app/mexamaps/sdk/platform/: AndroidPlatform.cpp  GuiThread.cpp  Language.cpp  Localization.cpp  PThreadImpl.cpp  PlatformGuiThread.cpp  SocketImpl.cpp
android/sdk/src/main/cpp/app/mexamaps/sdk/routing/: CarDirection.cpp  CarDirection.hpp  JunctionInfo.hpp  LaneInfo.cpp  PedestrianDirection.cpp  PedestrianDirection.hpp  RouteMarkData.hpp  RouteMarkType.hpp  RoutePointInfo.hpp  RouteRecommendationType.hpp  RoutingInfo.hpp  RoutingOptions.cpp  TransitRouteInfo.hpp  TransitStepInfo.hpp
android/sdk/src/main/cpp/app/mexamaps/sdk/routing/roadshield/: RoadShield.cpp  RoadShield.hpp  RoadShieldInfo.cpp  RoadShieldInfo.hpp  RoadShieldType.cpp  RoadShieldType.hpp
android/sdk/src/main/cpp/app/mexamaps/sdk/search/: DisplayedCategories.cpp  SearchEngine.cpp  SearchRecents.cpp
android/sdk/src/main/cpp/app/mexamaps/sdk/settings/: MapLanguageCode.cpp  UnitLocale.cpp
android/sdk/src/main/cpp/app/mexamaps/sdk/sound/: tts.cpp
android/sdk/src/main/cpp/app/mexamaps/sdk/subway/: SubwayManager.cpp
android/sdk/src/main/cpp/app/mexamaps/sdk/util/: Config.cpp  Distance.hpp  GeoUtils.cpp  HttpClient.cpp  Language.cpp  LogsManager.cpp  NetworkPolicy.cpp  StringUtils.cpp  UiThread.cpp
android/sdk/src/main/cpp/app/mexamaps/sdk/vulkan/: android_vulkan_context_factory.cpp  android_vulkan_context_factory.hpp
android/wear/: build.gradle
cmake/: OmimHelpers.cmake
data/: CLAUDE.md  replaced_tags.txt  taginfo.json
data/fonts/: whitelist.txt
data/organic_maps_emoji/: generate_font.py
data/strings/: strings.txt
dev_sandbox/: CMakeLists.txt  main.cpp
docs/: CODE_OF_CONDUCT.md  COMMIT_MESSAGES.md  COMMUNICATION.md  CONTRIBUTING.md  DCO.md  DEBUG_COMMANDS.md  EXPERIMENTAL_PUBLIC_TRANSPORT_SUPPORT.md  GOVERNANCE.md  INSTALL.md  ROADMAP.md  STYLES.md  SUBWAY_GENERATION.md  TEAMS.md  TRANSLATIONS.md
generator/: CLAUDE.md  address_enricher.hpp  feature_builder.cpp  geometry_holder.hpp  osm2type.cpp  place_processor.cpp  relation_tags.cpp  road_access_generator.cpp  water_boundary_checker.hpp
generator/generator_tests/: metadata_parser_test.cpp  raw_generator_test.cpp
iphone/: CLAUDE.md  upload_to_appstore.sh
iphone/metadata/: copyright.txt
libs/base/: thread.cpp
libs/coding/: url.hpp  zip_creator.cpp
libs/drape/: gl_extensions_list.cpp  gl_includes.hpp  glyph_manager.cpp  stipple_pen_resource.cpp  support_manager.cpp
libs/drape_frontend/: apply_feature_functors.cpp  my_position_controller.cpp  rule_drawer.cpp  screen_operations.cpp
libs/editor/: osm_editor.cpp  server_api.cpp  xml_feature.cpp
libs/ge0/: parser.cpp  parser.hpp
libs/indexer/: drules_selector.cpp  road_shields_parser.cpp  search_string_utils.cpp
libs/kml/: serdes.cpp  serdes_common.cpp  serdes_gpx.cpp
libs/map/: api_mark_point.hpp  bookmark_helpers.cpp  bookmark_manager.cpp  framework.cpp  routing_manager.cpp  search_mark.cpp
libs/platform/: distance.hpp  irish_grid_utils.hpp  os_grid_utils.cpp  os_grid_utils.hpp  platform.cpp  platform_linux.cpp  platform_win.cpp
libs/routing/: cross_mwm_connector.hpp  edge_estimator.cpp  geometry.cpp  index_graph_starter.cpp  index_graph_starter_joints.hpp  index_router.cpp  regions_router.cpp  road_access.hpp  route_weight.cpp  routing_callbacks.hpp  routing_helpers.hpp  turns_notification_manager.cpp
libs/routing_common/: bicycle_model.cpp  pedestrian_model.cpp
libs/search/: ranker.cpp  ranking_info.cpp  region_info_getter.cpp
libs/transit/: transit_schedule.hpp
packaging/: app.organicmaps.desktop.metainfo.xml
qt/: CMakeLists.txt  main.cpp  mainwindow.cpp
qt/qt_common/: map_widget.cpp
tools/python/: add_string.py  create_transformed_svg.py  generate_taginfo.py  google_maps_bookmarks.py  translate.py
tools/unix/: build_omim.sh  refresh-embedded-faq.sh  version.sh
(+1036 files in other folders)
